# pico-pulse

./: CMakeLists.txt  INTERFACING.md  README.md  interfacing.md  pico-pulse.c  pico-pulse.pio  spec.md
src/: command.c  command.h  exp.c  exp.h  hardware.c  hardware.h  main.c  pico-pulse.c  pico-pulse.pio  pulse.c  pulse.h  status.c  status.h  version.h.in
test/: Pipfile  README.md  test.py
